read all notifications
